Fix visual bugs
Fix text misalignment in projects.
Fix navbar movement.
Condense CSS.
Add 99 Spokes to experience.

--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -1,28 +1,11 @@
-p {
-    display: flex;
-    margin: auto;
-    width:80vw;
-    min-width: 400px;
-    padding: 20px;
-}
-
-.resumeSection {
-    display:flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.resumeSection > * {
-    margin: 20px;
-}
-
 .resumeIcon {
     transform: rotate(-25deg);
     color: #000;
     transition: all 250ms;
+    margin: 20px;
 }
 
 .resumeIcon:hover {
-    transform: rotate(0deg) scale(5.0);
+    transform: rotate(0deg) scale(4.0);
     color: #636341;
 }
